<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:layout_marginEnd="@dimen/margin_table_layout_view_keyboard"
    android:layout_marginStart="@dimen/margin_table_layout_view_keyboard"
    android:gravity="center"
    android:shrinkColumns="*"
    android:stretchColumns="*">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <com.arrg.app.uvault.views.uviews.PinLockButtonView
            android:id="@+id/pin_code_button_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            app:keyboard_button_text="@string/button1_large_text" />

        <com.arrg.app.uvault.views.uviews.PinLockButtonView
            android:id="@+id/pin_code_button_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            app:keyboard_button_text="@string/button2_large_text" />

        <com.arrg.app.uvault.views.uviews.PinLockButtonView
            android:id="@+id/pin_code_button_3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            app:keyboard_button_text="@string/button3_large_text" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <com.arrg.app.uvault.views.uviews.PinLockButtonView
            android:id="@+id/pin_code_button_4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            app:keyboard_button_text="@string/button4_large_text" />

        <com.arrg.app.uvault.views.uviews.PinLockButtonView
            android:id="@+id/pin_code_button_5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            app:keyboard_button_text="@string/button5_large_text" />

        <com.arrg.app.uvault.views.uviews.PinLockButtonView
            android:id="@+id/pin_code_button_6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            app:keyboard_button_text="@string/button6_large_text" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <com.arrg.app.uvault.views.uviews.PinLockButtonView
            android:id="@+id/pin_code_button_7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            app:keyboard_button_text="@string/button7_large_text" />

        <com.arrg.app.uvault.views.uviews.PinLockButtonView
            android:id="@+id/pin_code_button_8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            app:keyboard_button_text="@string/button8_large_text" />

        <com.arrg.app.uvault.views.uviews.PinLockButtonView
            android:id="@+id/pin_code_button_9"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            app:keyboard_button_text="@string/button9_large_text" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <com.arrg.app.uvault.views.uviews.PinLockButtonView
            android:id="@+id/pin_code_button_back"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            app:keyboard_button_image="@drawable/ic_arrow_back" />

        <com.arrg.app.uvault.views.uviews.PinLockButtonView
            android:id="@+id/pin_code_button_0"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            app:keyboard_button_text="@string/button11_large_text" />

        <com.arrg.app.uvault.views.uviews.PinLockButtonView
            android:id="@+id/pin_code_button_done"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            app:keyboard_button_image="@drawable/ic_done" />
    </TableRow>
</TableLayout>